--- a/feedsidebar/chrome/locale/da-DK/locale.properties
+++ b/feedsidebar/chrome/locale/da-DK/locale.properties
@@ -7,7 +7,6 @@ feedbar.errors.noFeedsFound=Ingen feed fundet.
 feedbar.errors.noFeedsFoundMore=Abonner på et feed med Firefox Live Bogmærkefunktion for at se feed-emnerne i sidebjælken.
 feedbar.errors.noFeedsFoundLabel=Mere information
 feedbar.errors.noFeedsFoundKey=M
-feedbar.errors.couldNotUnsubscribe=Fejl: Feed Sidebar kunne ikke fjerne feed fra dine bogmærker.
 feedbar.errors.parseError=Fejl under fortolkning af feed.
 feedbar.errors.invalidUrl=Ikke en feed-URL.
 feedbar.noSummary=Intet sammendrag.
@@ -24,5 +23,8 @@ feedbar.siteLink=Sitelink
 feedbar.publishedOn=Udgivet den %S på <a href="%S">%S</a>
 feedbar.previewHeader=Fra <a href="%S">%S</a>
 feedbar.download=Hent
-feedbar.trendBookmarkTitle=Seneste tendenser indenfor søgeord
-feedbar.trendBookmarkDescription=De seneste tendenser indenfor søgeord på Twitter, Digg og resten af det sociale net.
+feedbar.featured.unsubscribe=Slet abonnement
+feedbar.featured.subscribe=Abonner
+feedbar.featured.notification=Støt Feed Sidebar's udvikling ved, at prøve nogle af disse nye udvalgte feeds.
+feedbar.featured.okLabel=Helt klart!
+feedbar.featured.okKey=H
