--- a/feedsidebar/chrome/locale/es-ES/locale.properties
+++ b/feedsidebar/chrome/locale/es-ES/locale.properties
@@ -7,7 +7,6 @@ feedbar.errors.noFeedsFound=No se han encontrado hilos.
 feedbar.errors.noFeedsFoundMore=Vincularse a un hilo con los Marcadores Dinámicos de Firefox para ver los hlos en la barra lateral.
 feedbar.errors.noFeedsFoundLabel=Más información
 feedbar.errors.noFeedsFoundKey=M
-feedbar.errors.couldNotUnsubscribe=Error: Feed Sidebar no pudo eliminar el hilo de sus marcadores.
 feedbar.errors.parseError=Error leyendo el hilo.
 feedbar.errors.invalidUrl=No es una URL de hilo.
 feedbar.noSummary=No se ha proporcionado resumen.
@@ -24,5 +23,7 @@ feedbar.siteLink=Enlace a Sitio
 feedbar.publishedOn=Publicado el %S en <a href="%S">%S</a>
 feedbar.previewHeader=De <a href="%S">%S</a>
 feedbar.download=Descargar
-feedbar.trendBookmarkTitle=Últimos términos en tendencias de búsqueda
-feedbar.trendBookmarkDescription=Los últimos términos en tendencias de búsqueda de Twitter, Digg y el resto de redes sociales.
+feedbar.featured.unsubscribe=Desuscribir
+feedbar.featured.subscribe=Suscribir
+feedbar.featured.okLabel=¡Seguro!
+feedbar.featured.okKey=S
