--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -9,7 +9,6 @@ feedbar.errors.noFeedsFound=non è stato trovato alcun feed
 feedbar.errors.noFeedsFoundMore=Sottoscrivere un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
 feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
 feedbar.errors.noFeedsFoundKey=U
-feedbar.errors.couldNotUnsubscribe=Errore: impossibile eliminare il feed dai segnalibri
 feedbar.errors.parseError=Errore durante l'analisi del feed
 feedbar.errors.invalidUrl=URL del feed non valido
 feedbar.noSummary=Nessun sommario disponibile
@@ -36,5 +35,8 @@ feedbar.publishedOn=Pubblicato %S nel feed <a href="%S">%S</a>
 
 feedbar.previewHeader=Da <a href="%S">%S</a>
 feedbar.download=Scarica
-feedbar.trendBookmarkTitle=Ultime tendenze di ricerca sul web
-feedbar.trendBookmarkDescription=Ultime tendenze di ricerca su Twitter, Digg ed il resto delle reti sociali
+feedbar.featured.unsubscribe=Annulla sottoscrizione
+feedbar.featured.subscribe=Sottoscrivi
+feedbar.featured.notification=È possibile supportare lo sviluppo di Feed Sidebar sottoscrivendo uno o più feed proposti
+feedbar.featured.okLabel=OK
+feedbar.featured.okKey=O
