--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -7,7 +7,6 @@ feedbar.errors.noFeedsFound=Nie znaleziono kanałów
 feedbar.errors.noFeedsFoundMore=Aby oglądać wiadomości z kanału w panelu bocznym, subskrybuj kanał za pomocą dynamicznych zakładek Firefoksa
 feedbar.errors.noFeedsFoundLabel=Więcej informacji
 feedbar.errors.noFeedsFoundKey=W
-feedbar.errors.couldNotUnsubscribe=Błąd. Feed Sidebar nie mógł usunąć kanału z zakładek.
 feedbar.errors.parseError=Błąd przetwarzania kanału
 feedbar.errors.invalidUrl=Brak adresu kanału
 feedbar.noSummary=Brak krótkiego opisu
@@ -24,5 +23,8 @@ feedbar.siteLink=Odnośnik do witryny
 feedbar.publishedOn=Opublikowano dnia %S na <a href="%S">%S</a>
 feedbar.previewHeader=Z <a href="%S">%S</a>
 feedbar.download=Pobierz
-feedbar.trendBookmarkTitle=Ostatnio wyszukiwane zwroty
-feedbar.trendBookmarkDescription=Ostatnio wyszukiwane popularne zwroty na Twitterze, Diggu i innych portalach społecznościowych.
+feedbar.featured.unsubscribe=Anuluj subskrypcję
+feedbar.featured.subscribe=Subskrybuj
+feedbar.featured.notification=Wspomóż rozwój Feed Sidebara próbując nowe polecane kanały.
+feedbar.featured.okLabel=OK
+feedbar.featured.okKey=O
