--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -7,7 +7,6 @@ feedbar.errors.noFeedsFound=Neboli nájdené žiadne kanály.
 feedbar.errors.noFeedsFoundMore=Zapísať sa do kanálu s Aktívnymi záložkami Firefoxu pre zobrazenie správ v bočnom panely.
 feedbar.errors.noFeedsFoundLabel=Viac informácií
 feedbar.errors.noFeedsFoundKey=M
-feedbar.errors.couldNotUnsubscribe=Chyba: Feed Sidebar nemôže odstrániť kanál zo záložiek.
 feedbar.errors.parseError=Chyba pri rozbore kanála.
 feedbar.errors.invalidUrl=Žiadna adresa URL kanálu.
 feedbar.noSummary=Nebol poskytnutý kontrolný súčet.
@@ -24,5 +23,8 @@ feedbar.siteLink=Odkaz stránky
 feedbar.publishedOn=Založený %S na <a href="%S">%S</a>
 feedbar.previewHeader=Od <a href="%S">%S</a>
 feedbar.download=Stiahnuť
-feedbar.trendBookmarkTitle=Posledné trendové vyhľadávacie výrazy
-feedbar.trendBookmarkDescription=Posledné trendové vyhľadávacie výrazy na Twistter, Digg, a zvyšných sociálnych weboch.
+feedbar.featured.unsubscribe=Odhlásiť
+feedbar.featured.subscribe=Prihlásiť
+feedbar.featured.notification=Podporte vývoj doplnku Feed Sidebar vyskúšaním niektorých z týchto aktívnych záložiek.
+feedbar.featured.okLabel=Určite!
+feedbar.featured.okKey=S
