--- a/feedsidebar/chrome/locale/vi/locale.properties
+++ b/feedsidebar/chrome/locale/vi/locale.properties
@@ -7,7 +7,6 @@ feedbar.errors.noFeedsFound=Không tìm thấy feed nào cả.
 feedbar.errors.noFeedsFoundMore=Ngừng nhận tin bằng tính năng Live Bookmark của Firefox để xem các mục tin trên thanh nằm bên cạnh màn hình.
 feedbar.errors.noFeedsFoundLabel=Thông tin thêm
 feedbar.errors.noFeedsFoundKey=M
-feedbar.errors.couldNotUnsubscribe=Lỗi: thanh Sidebar không thể gỡ bỏ các feed từ những địa chỉ bạn đã đánh dấu.
 feedbar.errors.parseError=Lỗi sao chép feed.
 feedbar.errors.invalidUrl=Không phải là địa chỉ mục tin.
 feedbar.noSummary=Không có bài tóm tắt.
@@ -24,5 +23,8 @@ feedbar.siteLink=Liên kết của trang
 feedbar.publishedOn=Được công bố vào ngày %S trên <a href="%S">%S</a>
 feedbar.previewHeader=Từ
 feedbar.download=Tải về
-feedbar.trendBookmarkTitle=Tìm kiếm các diễn biến mới nhất
-feedbar.trendBookmarkDescription=Các diễn biến được tìm kiếm mới nhất trên Twitter, Digg và các mạng xã hội khác.
+feedbar.featured.unsubscribe=Không nhận tin
+feedbar.featured.subscribe=Nhận tin
+feedbar.featured.notification=Hỗ trợ sự phát triển của Feed Sidebar bằng cách thử một số nguồn cấp tin mới.
+feedbar.featured.okLabel=Chắc chắn rồi!
+feedbar.featured.okKey=S
