--- a/feedsidebar/chrome/locale/it-IT/locale.dtd
+++ b/feedsidebar/chrome/locale/it-IT/locale.dtd
@@ -53,8 +53,11 @@
 <!ENTITY feedbar.showAll.tooltip "Visualizza gli elementi letti e quelli non letti">
 <!ENTITY feedbar.alwaysOpenInNewTab "Apri gli elementi in nuove schede">
 <!ENTITY feedbar.updatesDisabled "Disattiva gli aggiornamenti automatici">
-<!ENTITY feedbar.trendsTitle "Tendenze del web in tempo reale">
-<!ENTITY feedbar.trendsP1 "È possibile aggiungere un feed relativo alle ultime tendenze di ricerca su Twitter, Digg ed il resto delle reti sociali">
-<!ENTITY feedbar.trendsP2 "Selezionare la casella qui sotto e fare clic su OK per aggiungere tale feed (eliminabile in qualsiasi momento), che verrà visualizzato automaticamente nella barra laterale permettendo di rimanere aggiornati sulle ultime notizie e tendenze del web">
-<!ENTITY feedbar.trendsP3 "Questo avviso non verrà più mostrato">
-<!ENTITY feedbar.checkbox_understand "Aggiungi il feed delle ultime tendenze di ricerca">
+<!ENTITY feedbar.options.general "Generali">
+<!ENTITY feedbar.featured.subscribe "Sottoscrivi">
+<!ENTITY feedbar.featured.panelTitle "Feed proposti">
+<!ENTITY feedbar.featured.description "È possibile supportare gratuitamente lo sviluppo di Feed Sidebar sottoscrivendo uno o più feed tra quelli proposti qui sotto">
+<!ENTITY feedbar.featured.contact "Per aggiungere un proprio feed alla lista inviare un'e-mail all'indirizzo cfinke@gmail.com">
+<!ENTITY feedbar.featured.trends.title "Ultime notizie e tendenze dal web">
+<!ENTITY feedbar.featured.trends.description "Feed relativo alle ultime notizie e tendenze dal web">
+<!ENTITY feedbar.featured.notifyMe "Avvisa periodicamente della disponibilità di nuovi feed proposti">
