--- a/feedsidebar/chrome/locale/da-DK/locale.properties
+++ b/feedsidebar/chrome/locale/da-DK/locale.properties
@@ -9,6 +9,8 @@ feedbar.errors.noFeedsFoundLabel=Mere information
 feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.parseError=Fejl under fortolkning af feed.
 feedbar.errors.invalidUrl=Ikke en feed-URL.
+feedbar.errors.viewFeed=Vis feed
+feedbar.errors.viewFeed.key=V
 feedbar.noSummary=Intet sammendrag.
 feedbar.warnOnTabs=Advar mig når åbning af flere faneblade kan gøre browseren langsom
 feedbar.warnOnTabsMessage=Du er ved at åbne %S faneblade. Dette kan gøre browseren langsom mens siderne indlæses. Er du sikker på du vil fortsætte?
@@ -19,7 +21,7 @@ feedbar.newItemsBody=Du har %S nye feed-emner.
 feedbar.workingOffline=Arbejder offline
 feedbar.permalink=Permalink
 feedbar.feedLink=Feedlink
-feedbar.siteLink=Sitelink
+feedbar.siteLink=Webstedslink
 feedbar.publishedOn=Udgivet den %S på <a href="%S">%S</a>
 feedbar.previewHeader=Fra <a href="%S">%S</a>
 feedbar.download=Hent
