--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -11,6 +11,8 @@ feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
 feedbar.errors.noFeedsFoundKey=U
 feedbar.errors.parseError=Errore durante l'analisi del feed
 feedbar.errors.invalidUrl=URL del feed non valido
+feedbar.errors.viewFeed=Visualizza feed
+feedbar.errors.viewFeed.key=V
 feedbar.noSummary=Nessun sommario disponibile
 feedbar.warnOnTabs=Avvisa quando l'apertura di più schede potrebbe rallentare il browser
 feedbar.warnOnTabsMessage=Si stanno per aprire %S schede. Questo potrebbe comportare un rallentamento del browser durante il caricamento delle pagine. Procedere comunque?
