--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -9,6 +9,8 @@ feedbar.errors.noFeedsFoundLabel=更多信息
 feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.parseError=分析订阅时遇到错误
 feedbar.errors.invalidUrl=不是有效的订阅地址
+feedbar.errors.viewFeed=查看订阅
+feedbar.errors.viewFeed.key=V
 feedbar.noSummary=没有提供概要
 feedbar.warnOnTabs=打开多个可能会影响 Firefox 速度的标签页时警告我
 feedbar.warnOnTabsMessage=你将要打开 %S 个标签页，载入页面时可能会影响 Firefox 速度，是否继续？
@@ -23,3 +25,8 @@ feedbar.siteLink=网站链接
 feedbar.publishedOn=<a href="%S">%S</a> 发布于 %S
 feedbar.previewHeader=来自 <a href="%S">%S</a>
 feedbar.download=下载
+feedbar.featured.unsubscribe=取消订阅
+feedbar.featured.subscribe=订阅
+feedbar.featured.notification=试读下列精选订阅来支持的 Feed Sidebar 开发
+feedbar.featured.okLabel=当然了！
+feedbar.featured.okKey=S
