--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -6,6 +6,7 @@ feedbar.noContent=Feed has no content.
 
 feedbar.errors.unavailable=Feed is unavailable
 feedbar.errors.invalidFeed=Feed has invalid root element
+feedbar.errors.404=Feed not found.
 feedbar.errors.noFeedsFound=No feeds found.
 feedbar.errors.noFeedsFoundMore=Subscribe to a feed with Firefox's Live Bookmark feature to view the feed's items in the sidebar.
 feedbar.errors.noFeedsFoundLabel=More information
@@ -15,6 +16,9 @@ feedbar.errors.invalidUrl=Not a feed URL.
 feedbar.errors.invalidFeed=Invalid feed.
 feedbar.errors.viewFeed=View feed
 feedbar.errors.viewFeed.key=V
+
+feedbar.unsubscribe=Unsubscribe
+feedbar.unsubscribe.key=U
 
 feedbar.noSummary=No summary provided.
 feedbar.warnOnTabs=Warn me when opening multiple tabs might slow down the browser
