updated locales, icons for ff4, updated firstrun code

--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -5,6 +5,7 @@ feedbar.statusText=Aggiornamento di %S feed su %S (%S) in corso…
 feedbar.noContent=il feed non contiene elementi
 feedbar.errors.unavailable=il feed non è disponibile
 feedbar.errors.invalidFeed=feed non valido
+feedbar.errors.404=feed non trovato
 feedbar.errors.noFeedsFound=non è stato trovato alcun feed
 feedbar.errors.noFeedsFoundMore=Sottoscrivere un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
 feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
@@ -13,6 +14,8 @@ feedbar.errors.parseError=Errore durante l'analisi del feed
 feedbar.errors.invalidUrl=URL del feed non valido
 feedbar.errors.viewFeed=Visualizza feed
 feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=Elimina feed
+feedbar.unsubscribe.key=E
 feedbar.noSummary=Nessun sommario disponibile
 feedbar.warnOnTabs=Avvisa quando l'apertura di più schede potrebbe rallentare il browser
 feedbar.warnOnTabsMessage=Si stanno per aprire %S schede. Questo potrebbe comportare un rallentamento del browser durante il caricamento delle pagine. Procedere comunque?
