--- a/feedsidebar/chrome/locale/da-DK/locale.properties
+++ b/feedsidebar/chrome/locale/da-DK/locale.properties
@@ -3,6 +3,7 @@ feedbar.statusText=Opdaterer %S af %S (%S)...
 feedbar.noContent=Feed har intet indhold.
 feedbar.errors.unavailable=Feed er ikke tilgængeligt
 feedbar.errors.invalidFeed=Ugyldigt feed.
+feedbar.errors.404=Feed ikke fundet.
 feedbar.errors.noFeedsFound=Ingen feed fundet.
 feedbar.errors.noFeedsFoundMore=Abonner på et feed med Firefox Live Bogmærkefunktion for at se feed-emnerne i sidebjælken.
 feedbar.errors.noFeedsFoundLabel=Mere information
@@ -11,6 +12,8 @@ feedbar.errors.parseError=Fejl under fortolkning af feed.
 feedbar.errors.invalidUrl=Ikke en feed-URL.
 feedbar.errors.viewFeed=Vis feed
 feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=Fjern abonnement
+feedbar.unsubscribe.key=F
 feedbar.noSummary=Intet sammendrag.
 feedbar.warnOnTabs=Advar mig når åbning af flere faneblade kan gøre browseren langsom
 feedbar.warnOnTabsMessage=Du er ved at åbne %S faneblade. Dette kan gøre browseren langsom mens siderne indlæses. Er du sikker på du vil fortsætte?
@@ -25,7 +28,7 @@ feedbar.siteLink=Webstedslink
 feedbar.publishedOn=Udgivet den %S på <a href="%S">%S</a>
 feedbar.previewHeader=Fra <a href="%S">%S</a>
 feedbar.download=Hent
-feedbar.featured.unsubscribe=Slet abonnement
+feedbar.featured.unsubscribe=Fjern abonnement
 feedbar.featured.subscribe=Abonner
 feedbar.featured.notification=Støt Feed Sidebar's udvikling ved, at prøve nogle af disse nye udvalgte feeds.
 feedbar.featured.okLabel=Helt klart!
