--- a/feedsidebar/chrome/locale/es-ES/locale.dtd
+++ b/feedsidebar/chrome/locale/es-ES/locale.dtd
@@ -53,3 +53,4 @@
 <!ENTITY feedbar.updatesDisabled "Desactivar Actualizaciones Automáticas">
 <!ENTITY feedbar.options.general "General">
 <!ENTITY feedbar.featured.subscribe "Suscribir">
+<!ENTITY feedbar.featured.contact "(Si quieres ver tu canal web en esta lista, escribe a cfinke@gmail.com.)">
