--- a/feedsidebar/chrome/locale/es-ES/locale.properties
+++ b/feedsidebar/chrome/locale/es-ES/locale.properties
@@ -3,12 +3,17 @@ feedbar.statusText=Actualizando %S de %S (%S)...
 feedbar.noContent=Hilo sin contenido.
 feedbar.errors.unavailable=Hilo no disponible
 feedbar.errors.invalidFeed=Hilo no válido.
+feedbar.errors.404=Feed no encontrado.
 feedbar.errors.noFeedsFound=No se han encontrado hilos.
 feedbar.errors.noFeedsFoundMore=Vincularse a un hilo con los Marcadores Dinámicos de Firefox para ver los hlos en la barra lateral.
 feedbar.errors.noFeedsFoundLabel=Más información
 feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.parseError=Error leyendo el hilo.
 feedbar.errors.invalidUrl=No es una URL de hilo.
+feedbar.errors.viewFeed=Ver feed
+feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=Desuscribir
+feedbar.unsubscribe.key=U
 feedbar.noSummary=No se ha proporcionado resumen.
 feedbar.warnOnTabs=Avisarme cuando el abrir varias pestañas pueda disminuir la velocidad del navegador
 feedbar.warnOnTabsMessage=Está apunto de abrir %S pestañas. Esto podría disminuir la velocidad del navegador mientras cargan las páginas. ¿Desea continuar?
@@ -25,5 +30,6 @@ feedbar.previewHeader=De <a href="%S">%S</a>
 feedbar.download=Descargar
 feedbar.featured.unsubscribe=Desuscribir
 feedbar.featured.subscribe=Suscribir
+feedbar.featured.notification=Soporta desarrollo de la barra lateral de Feed probando algunas de estas nuevos feeds destacados.
 feedbar.featured.okLabel=¡Seguro!
 feedbar.featured.okKey=S
