--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -3,12 +3,17 @@ feedbar.statusText=Načítavanie %S z %S (%S)...
 feedbar.noContent=Kanál je bez obsahu.
 feedbar.errors.unavailable=Kanál je nedostupný
 feedbar.errors.invalidFeed=Neplatný kanál.
+feedbar.errors.404=Kanál nebol nájdený.
 feedbar.errors.noFeedsFound=Neboli nájdené žiadne kanály.
 feedbar.errors.noFeedsFoundMore=Zapísať sa do kanálu s Aktívnymi záložkami Firefoxu pre zobrazenie správ v bočnom panely.
 feedbar.errors.noFeedsFoundLabel=Viac informácií
 feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.parseError=Chyba pri rozbore kanála.
 feedbar.errors.invalidUrl=Žiadna adresa URL kanálu.
+feedbar.errors.viewFeed=Zobraziť kanál
+feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=Odhlásiť
+feedbar.unsubscribe.key=U
 feedbar.noSummary=Nebol poskytnutý kontrolný súčet.
 feedbar.warnOnTabs=Upozorniť ma pri otváraní viacerých kariet, čo môže spôsobiť spomalenie prehliadača
 feedbar.warnOnTabsMessage=Chcete otvoriť %S kariet. Toto môže počas načítavania spomaliť váš prehliadač. Chcete pokračovať?
