--- a/feedsidebar/chrome/locale/pt-BR/locale.properties
+++ b/feedsidebar/chrome/locale/pt-BR/locale.properties
@@ -1,7 +1,41 @@
-extensions.feedbar@efinke.com.description=Mostra os itens não lidos das suas assinaturas de Favoritos no painel lateral.
-feedbar.errors.unavailable=O feed está indisponível
-feedbar.errors.invalidFeed=O feed tem um elemento-raiz inválido
-feedbar.errors.noFeedsFound=Nenhum feed encontrado.
-feedbar.errors.noFeedsFoundMore=Assine um feed com os "Live Bookmarks" do Firefox para ver os itens do feed no painel lateral.
+extensions.feedbar@efinke.com.description=Exibe no painel os itens dos seus favoritos RSS.
+# Updating 1 of 10 (Joe's Blog)
+feedbar.statusText=Atualizando %S de %S (%S)...
+feedbar.noContent=O RSS não tem conteúdo.
+feedbar.errors.unavailable=O RSS está indisponível
+feedbar.errors.invalidFeed=RSS inválido.
+feedbar.errors.404=RSS não encontrado.
+feedbar.errors.noFeedsFound=Nenhum RSS encontrado.
+feedbar.errors.noFeedsFoundMore=Inscreva um RSS nos favoritos do Firefox para ver os itens dele no painel.
 feedbar.errors.noFeedsFoundLabel=Mais informações
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.parseError=Erro ao analisar RSS.
+feedbar.errors.invalidUrl=Não é uma URL de RSS.
+feedbar.errors.viewFeed=Exibir RSS
+feedbar.errors.viewFeed.key=E
+feedbar.unsubscribe=Cancelar inscrição
+feedbar.unsubscribe.key=C
+feedbar.noSummary=Resumo não fornecido.
+feedbar.warnOnTabs=Sempre alertar que o carregamento de muitas abas pode deixar o navegador lento
+feedbar.warnOnTabsMessage=Serão abertas %S abas. O navegador pode ficar lento durante o carregamento. Deseja continuar?
+feedbar.confirmOpenInTabs=Confirmar abertura
+feedbar.openConfirmText=Abrir abas
+feedbar.newItemBody=Um item novo
+feedbar.newItemsBody=%S itens novos
+feedbar.workingOffline=Modo offline
+feedbar.permalink=Link permanente
+feedbar.feedLink=Link para o RSS
+feedbar.siteLink=Link para o site
+# First %S is a date.
+# Second %S is a URL
+# Third %S is the feed name
+feedbar.publishedOn=Publicado %S em <a href="%S">%S</a>
+# First %S is a URL
+# Second %S is a feed name
+feedbar.previewHeader=De <a href="%S">%S</a>
+feedbar.download=Download
+feedbar.featured.unsubscribe=Cancelar inscrição
+feedbar.featured.subscribe=Inscrever
+feedbar.featured.notification=Apoie o desenvolvimento do Feed Sibar experimentando alguns destes novos RSS em destaque.
+feedbar.featured.okLabel=Claro!
+feedbar.featured.okKey=C
