--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -3,6 +3,7 @@ feedbar.statusText=正在更新 %S/%S (%S)...
 feedbar.noContent=订阅为空白内容
 feedbar.errors.unavailable=没有新项目
 feedbar.errors.invalidFeed=订阅含有无效根元素
+feedbar.errors.404=未找到订阅。
 feedbar.errors.noFeedsFound=找不到订阅
 feedbar.errors.noFeedsFoundMore=必须添加实时书签才能在侧栏查看项目
 feedbar.errors.noFeedsFoundLabel=更多信息
@@ -11,6 +12,8 @@ feedbar.errors.parseError=分析订阅时遇到错误
 feedbar.errors.invalidUrl=不是有效的订阅地址
 feedbar.errors.viewFeed=查看订阅
 feedbar.errors.viewFeed.key=V
+feedbar.unsubscribe=未订阅
+feedbar.unsubscribe.key=U
 feedbar.noSummary=没有提供概要
 feedbar.warnOnTabs=打开多个可能会影响 Firefox 速度的标签页时警告我
 feedbar.warnOnTabsMessage=你将要打开 %S 个标签页，载入页面时可能会影响 Firefox 速度，是否继续？
