E-mail address change.

--- a/feedsidebar/chrome/locale/da-DK/locale.dtd
+++ b/feedsidebar/chrome/locale/da-DK/locale.dtd
@@ -55,5 +55,5 @@
 <!ENTITY feedbar.featured.subscribe "Abonner">
 <!ENTITY feedbar.featured.panelTitle "Udvalgte feeds">
 <!ENTITY feedbar.featured.description "Støt udviklingen af Feed Sidebar uden at bruge en krone ved at prøve nogle af disse feeds fra Friends of Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(Hvis du ønsker at se dit feed på denne liste, send en mail til cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(Hvis du ønsker at se dit feed på denne liste, send en mail til chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Giv mig periodisk besked om nye udvalgte feeds.">
