--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -55,5 +55,5 @@
 <!ENTITY feedbar.featured.subscribe "Subscribe">
 <!ENTITY feedbar.featured.panelTitle "Featured Feeds">
 <!ENTITY feedbar.featured.description "Support Feed Sidebar's development without spending a cent by trying out some of these feeds from the Friends of Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(If you'd like to see your feed in this list, e-mail cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(If you'd like to see your feed in this list, e-mail chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Periodically notify me about new featured feeds.">
