--- a/feedsidebar/chrome/locale/es-ES/locale.dtd
+++ b/feedsidebar/chrome/locale/es-ES/locale.dtd
@@ -55,5 +55,5 @@
 <!ENTITY feedbar.featured.subscribe "Suscribir">
 <!ENTITY feedbar.featured.panelTitle "Feeds Destacados">
 <!ENTITY feedbar.featured.description "Soporta desarrollo de barra lateral de Feed probando algunos de esos Feeds de los Amigos de Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(Si quieres ver tu canal web en esta lista, escribe a cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(Si quieres ver tu canal web en esta lista, escribe a chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Recordarme periódicamente sobre Feeds destacados.">
