--- a/feedsidebar/chrome/locale/pt-BR/locale.dtd
+++ b/feedsidebar/chrome/locale/pt-BR/locale.dtd
@@ -57,5 +57,5 @@
 <!ENTITY feedbar.featured.subscribe "Inscrever">
 <!ENTITY feedbar.featured.panelTitle "RSS em destaque">
 <!ENTITY feedbar.featured.description "Apoie o desenvolvimento do Feed Sidebar sem gastar um centavo. Experimente alguns destes RSS dos parceiros do Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(Se você gostaria de ver seu RSS nesta lista, envie um e-mail para cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(Se você gostaria de ver seu RSS nesta lista, envie um e-mail para chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Avisar periodicamente sobre novos RSS em destaque.">
