--- a/feedsidebar/chrome/locale/sv-SE/locale.dtd
+++ b/feedsidebar/chrome/locale/sv-SE/locale.dtd
@@ -57,5 +57,5 @@
 <!ENTITY feedbar.featured.subscribe "Prenumerera">
 <!ENTITY feedbar.featured.panelTitle "Rekommenderade flöden">
 <!ENTITY feedbar.featured.description "Stöd Feed Sidebars utveckling utan att spendera ett enda öre genom att testa några av dessa flöden från Feed Sidebars vänner.">
-<!ENTITY feedbar.featured.contact "(Om du skulle vilja se ditt eget flöde i denna lista, e-posta cfinke@gmail.com)">
+<!ENTITY feedbar.featured.contact "(Om du skulle vilja se ditt eget flöde i denna lista, e-posta chris@efinke.com)">
 <!ENTITY feedbar.featured.notifyMe "Meddelande mig regelbundet om nya rekommenderade flöden.">
