--- a/feedsidebar/chrome/locale/vi/locale.dtd
+++ b/feedsidebar/chrome/locale/vi/locale.dtd
@@ -55,5 +55,5 @@
 <!ENTITY feedbar.featured.subscribe "Đăng ký nhận tin">
 <!ENTITY feedbar.featured.panelTitle "Các tin được cung cấp">
 <!ENTITY feedbar.featured.description "Hỗ trợ sự phát triển của Feed Sidebar mà không cần mất tí tiền nào bằng cách đọc các tin tức từ Bạn Bè của Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(Nếu bạn muốn thấy tin tức của mình trên danh sách này, hãy gửi thư tới cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(Nếu bạn muốn thấy tin tức của mình trên danh sách này, hãy gửi thư tới chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Thông báo định kỳ với tôi về những nguồn cấp tin mới.">
