--- a/feedsidebar/chrome/locale/it-IT/locale.dtd
+++ b/feedsidebar/chrome/locale/it-IT/locale.dtd
@@ -57,5 +57,5 @@
 <!ENTITY feedbar.featured.subscribe "Sottoscrivi">
 <!ENTITY feedbar.featured.panelTitle "Feed proposti">
 <!ENTITY feedbar.featured.description "È possibile supportare gratuitamente lo sviluppo di Feed Sidebar sottoscrivendo uno o più feed tra quelli proposti qui sotto">
-<!ENTITY feedbar.featured.contact "Per aggiungere un proprio feed alla lista inviare un'e-mail all'indirizzo cfinke@gmail.com">
+<!ENTITY feedbar.featured.contact "Per aggiungere un proprio feed alla lista inviare un'e-mail all'indirizzo chris@efinke.com">
 <!ENTITY feedbar.featured.notifyMe "Avvisa periodicamente della disponibilità di nuovi feed proposti">
