--- a/feedsidebar/chrome/locale/sk-SK/locale.dtd
+++ b/feedsidebar/chrome/locale/sk-SK/locale.dtd
@@ -55,5 +55,5 @@
 <!ENTITY feedbar.featured.subscribe "Odoberať">
 <!ENTITY feedbar.featured.panelTitle "Najlepšie aktívne záložky">
 <!ENTITY feedbar.featured.description "Podporte vývoj doplnku Feed Sidebar bez minutia centu vyskúšaním niektorých z týchto aktívnych záložiek od priateľov alebo Feed Sidebar.">
-<!ENTITY feedbar.featured.contact "(Ak by ste chceli vidieť vašu aktívnu záložku v tomto zozname napíšte email na cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.contact "(Ak by ste chceli vidieť vašu aktívnu záložku v tomto zozname napíšte email na chris@efinke.com.)">
 <!ENTITY feedbar.featured.notifyMe "Pravidelne ma informujte o najlepších nových aktívnych záložkách.">
