Updated look and feel for the in-tab preview.

--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -22,9 +22,12 @@ feedbar.openConfirmText=Open tabs
 feedbar.newItemBody=One new item
 feedbar.newItemsBody=%S new items
 feedbar.workingOffline=Working offline
-feedbar.permalink=Permalink
-feedbar.feedLink=Feed Link
-feedbar.siteLink=Site Link
-feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
-feedbar.previewHeader=From <a href="%S">%S</a>
+feedbar.previewLink=Visit Website
 feedbar.download=Download
+feedbar.time.dayAgo=1 day ago
+feedbar.time.daysAgo=%S days ago
+feedbar.time.hourAgo=1 hour ago
+feedbar.time.hoursAgo=%S hours ago
+feedbar.time.minuteAgo=1 minute ago
+feedbar.time.minutesAgo=%S minutes ago
+feedbar.time.justNow=Less than a minute ago
